# IngameListMod

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: multi-platform.yml
src/: main.cpp
